# tbg-magic-angle-gaia

./: .gitignore  ANALYSIS.md  README.md  pyproject.toml  references.json
.gaia/: beliefs.json  compile_metadata.json  ir.json  ir_hash
.gaia/inquiry/: state.json  tactics.jsonl
.gaia/inquiry/reviews/: 2026-05-03T18-20-14Z_6b45b4b9_auto.json  2026-05-03T18-21-59Z_6b45b4b9_auto.json  2026-05-04T04-30-59Z_1e8bceba_auto.json  2026-05-04T04-32-54Z_1e8bceba_auto.json  2026-05-04T04-34-08Z_1e8bceba_auto.json  2026-05-04T04-35-36Z_1e8bceba_auto.json  2026-05-04T05-26-00Z_1c875116_auto.json  2026-05-04T05-30-59Z_1c875116_auto.json  2026-05-04T05-32-58Z_1c875116_auto.json  2026-05-04T07-02-08Z_a9fcde51_auto.json
.gaia/manifests/: bridges.json  exports.json  holes.json  premises.json
artifacts/lkm-discovery/: candidates.md  final_audit.md  mapping_audit.md  merge_audit.md  merge_decisions.todo  semantic_label_audit.md  turn2_candidates.md
artifacts/lkm-discovery/input/: candidate_ids.txt  candidate_pool.json  chain_backed_candidates.json  contradictions.md  evidence_gcn_14a55aff3de24a3a.json  evidence_gcn_2cf09f115b814154.json  (+60 more)
docs/: detailed-reasoning.md  starmap.dot  starmap.html
src/tbg_magic_angle/: __init__.py  cross_paper.py  paper_burg2022.py  paper_cantele2020.py  paper_cao2018.py  paper_dassarma2020.py  paper_dassarma2022.py  paper_herzogarbeitman2022.py  paper_liu2020.py  paper_ma2020.py  paper_nguyen2022.py  paper_qin2021.py  paper_tritsaris2020.py  paper_uchida2014.py  paper_wang2020.py  paper_wu2018.py  paper_yamada2020.py  paper_zhang2019.py  priors.py
(+301 files in other folders)
